# now-playing

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_CONFIGURATION.md  CAPTURE_REPLAY.md  CAPTURE_REPLAY_DEMO.md  COMMIT_GUIDE.md  COMMIT_GUIDE.md.new  LICENSE  MUSIC_DISCOVERY.md  Makefile  PHASE2_ROADMAP.md  README.md  SWIPE_IMPROVEMENTS.md  TODO.md  architecture.MD  cliff.toml  config.example.yaml  demo_enhanced.sh  disable_virtual_keyboard.sh  enrichment_demo.py  install_menu.sh  music_discovery.py  musicbrainz_demo.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_discovery.sh  setup.cfg  setup.py  test_line_length.py  test_linting.py  test_no_line_limit.py  test_unused.py  uninstall_menu.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: tests.yml
.github/workflows/: changelog.yml  ci.yml  coverage.yml
devtools/: capture_metadata.py  demo_panels.py  metadata_display.py  metadata_test.py  replay_capture.py  touchscreen_demo.py
nowplaying/: __init__.py  capture_replay.py  cli.py  config.py  config_loader.py  content_context.py  content_panels.py  debug_subsystems.py  demo_data.py  display.py  enrichment_services.py  mcp_server.py  metadata_monitor.py  metadata_reader.py  module_registry.py  music_views.py  panel_navigator.py  playback_state.py  plugin_system.py  test.py
nowplaying/enrichment/: __init__.py  acoustid_service.py  allmusic_service.py  base.py  discogs_service.py  engine.py  genius_service.py  lastfm_service.py  musicbrainz_service.py  pitchfork_service.py  setlistfm_service.py  songfacts_service.py  songkick_service.py  spotify_service.py
nowplaying/panels/: __init__.py  acoustid_panel.py  album_enrichment_panel.py  album_info_panel.py  artist_enrichment_panel.py  artist_info_panel.py  base.py  cover_art_panel.py  debug_panel.py  discography_panel.py  discogs_panel.py  discovery_panel.py  enrichment_log_buffer.py  enrichment_status_panel.py  lastfm_panel.py  lyrics_panel.py  musicbrainz_panel.py  now_playing_panel.py  recommendations_panel.py  registry.py  service_status_panel.py  social_stats_panel.py  song_enrichment_panel.py  vu_meter_panel.py
testdata/: README.md  sample_skipping_songs.json
tests/: demo_panels_ui.py  test_basic.py  test_blocking_fixes.py  test_capture_replay.py  test_content_panel_base.py  test_content_panel_registry.py  test_discogs_service.py  test_enrichment_base.py  test_enrichment_engine.py  test_enrichment_panels.py  test_genius_service.py  test_headless_mode.py  test_lastfm_service.py  test_mcp.py  test_mcp_integration.py  test_metadata_display.py  test_metadata_monitor.py  test_metadata_reader.py  test_metadata_reader_extended.py  test_module_registry.py  test_monitor_capture.py  test_musicbrainz_service.py  test_panels.py  test_panels_acoustid_genius.py  test_panels_simple.py  test_panels_simple_ui.py  test_playback_state.py  test_setlistfm_service.py  test_shairport_sync_pipe_reader.py  test_spotify_acoustid_services.py
